components/spre-automations/base/pharos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pharos
  labels:
    app: pharos
spec:
  selector:
    app: pharos
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
